# lxml-parse-html

./: Pipfile  README.md  opas_violencia_contra_mulheres.html  pyproject.toml  requirements.txt
lxml-parse-html/: opas_violencia_contra_mulheres.html  parsing_html_with_lxml.ipynb  parsing_html_with_lxml.slides.html  parsing_html_with_lxml_EN.ipynb  parsing_html_with_lxml_EN.slides.html  parsing_html_with_lxml_PT_BR.ipynb  parsing_html_with_lxml_PT_BR.slides.html
