[tool.poetry]
name = "lxml-parse-html"
version = "0.1.0"
description = "TDC 2019 talk on parsing HTMl using the lxml lib."
authors = ["Alana Domit Bittar <alanadomitbittar@protonmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.5.3"
jupyter = "^1.0"
crawlab = "=0.1.0a8"
lxml = "^4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
